juice-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-balancer
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: juice-balancer
  ports:
    - protocol: TCP
      port: 3000       # Port inside the cluster
      targetPort: 3000  # Port inside the pod
