ingress-res.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: ""
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: juice-balancer
            port:
              number: 3000
