ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-ingress
  namespace: default
spec:
#  ingressClassName: nginx
  rules:
  - host: ""  # Adres IP Nginx Ingress Controller
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: juice-balancer
            port:
              number: 3000  # Port, na którym usługa jest dostępna wewnętrznie
